--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,16 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "darryldecode/cart": "~4.0",
+        "fakerphp/faker": "^1.9.1",
         "guzzlehttp/guzzle": "^7.2",
+        "illuminate/events": "*",
+        "illuminate/session": "*",
+        "illuminate/support": "*",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "^3.0",
-        "fakerphp/faker": "^1.9.1"
+        "livewire/livewire": "^3.0"
     },
     "require-dev": {
         "laravel/breeze": "^1.24",
