--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "cloudinary-labs/cloudinary-laravel": "^2.0",
         "darryldecode/cart": "~4.0",
         "fakerphp/faker": "^1.9.1",
         "guzzlehttp/guzzle": "^7.2",
